# family_feud_game

./: README.md  answers.txt  familyfeud.py  pyproject.toml
games/: testanswers.txt  testfm.txt
main/: AIFamily.py  SETUP.txt  SpeechtoText.py  clientcom.py  familyfeud.py  familyfeudUI.py  game.py  gameLogicHandlers.py  proximityMeasures.py  questiongenerators.py  qwindows.py  sound_player.py  turns.py
