[project]
name="Family Feud Python"
version="0.1.0"
authors = [
    { name = "Kylind Reagan", email = "kylind.reagan@my.maryvillecollege.edu" },
]
dependencies = [
    "groq~=0.13",
    "PyAudio~=0.2.14",
    "SpeechRecognition~=3.12.0",
    "PyQt5~=5.15.11",
    "pygame~=2.6.1",
]
requires-python = "~=3.0"